syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.lsspace.preference";

package com.glance.spaces.lsspace.preference;

import "com/glance/spaces/lsspace/preference/pref_display_config.proto";

message PrefOption {
  string id = 1;
  bool is_selected = 2;
  bool is_default = 3;
  bool active = 4;
  PrefDisplayConfig display = 5;
  string src_of_selection = 6;
}